# detecteff

./: Cargo.toml  README.md  fix-terminal.bat  install.bat
src/: lib.rs  main.rs
